Fixed z-index's on authorized page, fixed spelling mistake on loading

--- a/frontend/src/AuthorizedPage/CreateOrJoin/CreateOrJoin.css
+++ b/frontend/src/AuthorizedPage/CreateOrJoin/CreateOrJoin.css
@@ -4,6 +4,7 @@
 .CreateOrJoinBox{
     padding-top: 2vw;
     padding-left: 5vw;
+    z-index: 2;
 }
 
 .openCollapse{
